[package]
name = "mini-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { git = "https://github.com/smithay/smithay", features = ["backend_winit", "wayland_frontend"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
